daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-ds
  namespace: test
spec:
  selector:
    matchLabels:
      app: nginx
  template: # POD Template
    metadata:
      name: nginx-pod
      labels:
        app: nginx
    spec:
      tolerations:
      - operator: "Exists"
        effect: "NoSchedule"
      containers:
        - name: nginx-container
          image: nginx:latest
          ports:
            - containerPort: 80
