mutil.yaml
apiVersion: v1
kind: Pod
metadata:
  name: javanwebapppod
  labels:
    app: multi
  namespace: test
spec:
  containers:
  - name: javawebapp
    image: dockerhandson/java-web-app
    ports:
    - containerPort: 8080
  - name: nginx-container
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: multiservice
  namespace: test
spec:
  type: NodePort
  selector:
     app: multi
  ports:
  - name: java
    nodePort: 32558
    port: 80
    targetPort: 8080
  - name: nginx
    nodePort: 32559
    port: 90
    targetPort: 80
