nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: sai
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: sai
spec:
  type: NodePort
  selector:
     app: nginx
  ports:
  - name: nginx
    nodePort: 32559
    port: 90
    targetPort: 80
