pod_mavenwebapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mavenwebapppod
  labels:
    app:  mavenwebapp
  namespace: test	
spec:
  containers:
  - name: mavenwebappcontainer
    image: dockerhandson/maven-web-application:1
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenwebappservice
  namespace: test  
spec:
  type: ClusterIP
  selector:
     app: mavenwebapp
  ports:
  - port: 80
    targetPort: 8080
 #   nodePort: 32555
