springapp.yaml
# Spring App & Mongod DB as POD with out volumes

apiVersion: apps/v1
kind: Deployment
metadata:
  name: springappdeployment
spec:
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springappcontainer
        image: dockerhandson/spring-boot-mongo:1
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springappsvc
spec:
  type: ClusterIP
  selector:
    app: springapp
  ports:
  - port: 8005
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mongosvc
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: nfs-dynamic-pvc
# spec:
#   storageClassName: azurefile
#   accessModes:
#   - ReadWriteOnce
#   resources:
#     requests:
#       storage: 100Mi
