ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: charan-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: charan.live 
#     http:             # not https (we cannot use https)
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service: 
#             name: javawebapp-service
#             port: 
#               number: 80
#   - host: maven.charan.live
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: mavenwebappservice
#             port: 
#               number: 80
#   - host: spring.charan.live
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: springappsvc
#             port: 
#               number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: charan-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: charan.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springappsvc
            port: 
              number: 8005
      - path: /java-web-app
        pathType: Prefix
        backend:
          service:
            name: javawebapp-service
            port: 
              number: 80
      - path: /maven-web-application
        pathType: Prefix
        backend:
          service:
            name: mavenwebappservice
            port: 
              number: 80
