netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-policy
  namespace: test
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
